# Chess

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.MD
Chess/include/: Bishop.hpp  Board.hpp  Cell.hpp  Color.hpp  DiagonalMoveHelper.hpp  GameManager.hpp  IDisplay.hpp  King.hpp  Knight.hpp  Move.hpp  MoveValidator.hpp  MovementHelper.hpp  Pawn.hpp  Piece.hpp  Position.hpp  Queen.hpp  Rook.hpp  Turn.hpp  utils.hpp
Chess/src/: Bishop.cpp  Board.cpp  Cell.cpp  Color.cpp  DiagonalMoveHelper.cpp  GameManager.cpp  King.cpp  Knight.cpp  Move.cpp  MoveValidator.cpp  MovementHelper.cpp  Pawn.cpp  Piece.cpp  Position.cpp  Rook.cpp  main.cpp  utils.cpp
ChessTest/: BishopTest.cpp  BoardTest.cpp  CheckTest.cpp  GameManagerTest.cpp  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  QueenTest.cpp  TestUtilities.cpp  TestUtilities.hpp  test.cpp
ChessTest/resources/: BlackCastlingTest.txt  BlockedWhiteCastlingQueenSideDueToBishopThreeTilesOver.txt  CanNotCastleGivenRooksHaveMoved.txt  CenterQueenMovementTest.txt  GivenKingInCheckExpectCanNotCastle.txt  KingFacingEnemyKnight_Movements.txt  (+8 more)
include/: Cell.hpp  Color.hpp  GameManager.hpp  History.hpp  IDisplay.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Position.hpp  PromotionChoice.hpp  Queen.hpp  Turn.hpp  utils.hpp
src/: Bishop.cpp  Cell.cpp  Color.cpp  GameManager.cpp  HIstory.cpp  King.cpp  Knight.cpp  Move.cpp  MovementHelper.cpp  Pawn.cpp  Piece.cpp  Position.cpp  Queen.cpp  Turn.cpp  main.cpp
test/: CheckTest.cpp  GameManagerTest.cpp  KingTest.cpp  KnightTest.cpp  QueenTest.cpp  RookTest.cpp  TestUtilities.hpp
(+10 files in other folders)
